[package]
name = "wasm-image-processor"
version = "0.1.0"
authors = ["Joan Leon <joan@joanleon.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size and performance
opt-level = 3
lto = true
codegen-units = 1
